--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "dependencies": {
     "@types/jest": "24.0.12",
     "@types/node": "11.13.8",
+    "@types/qs": "^6.5.3",
     "@types/react": "16.8.15",
     "@types/react-dom": "16.8.4",
+    "axios": "^0.18.0",
+    "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-player": "^1.11.0",
     "react-scripts": "3.0.0",
     "typescript": "3.4.5"
   },
